@@ -1,11 +1,12 @@
 
 #default configuration file for dsh.
+  # suppled as part of dancer's shell
 
 verbose = 0 
 
  remoteshell =rsh  
  showmachinenames = 1
-waitshell=1
+waitshell=1  # whether to wait for execution
 
 #remoteshellopt=...
 
